--- a/index.html
+++ b/index.html
@@ -204,6 +204,17 @@
                     <p><a href="tel:4805442940">(480) 544-2940</a></p>
                     <p><a href="mailto:brent@rizzydoors.com">brent@rizzydoors.com</a></p>
                 </div>
+                <div class="contact-divider">
+                    <span>OR</span>
+                </div>
+                <form class="contact-form" action="#" method="POST">
+                    <div class="form-group">
+                        <textarea id="message" name="message" placeholder="What can we help you with?
+
+(Please include contact information)" rows="3" required></textarea>
+                    </div>
+                    <button type="submit" class="submit-btn">Make Inquiry</button>
+                </form>
             </div>
         </section>
     </main>
